[JSC] `export async function` changes prototype to Function instead of AsyncFunction https://bugs.webkit.org/show_bug.cgi?id=291255 rdar://149083588

Reviewed by Keith Miller.

Module's declaration insertion should appropriately materialize
functions with their specific constructors.

* JSTests/modules/exported-async-function-shape-check.js: Added.
(export.async a):
(async b):
(async c):
(Object.getPrototypeOf.a.Object.getPrototypeOf):
(Object.getPrototypeOf):
* JSTests/modules/exported-functions-check.js: Added.
(shouldBe):
(export.async exportedAsyncFunction):
(export.async exportedAsyncGeneratorFunction):
(export.exportedGeneratorFunction):
(export.exportedFunction):
(async nonExportedAsyncFunction):
(async nonExportedAsyncGeneratorFunction):
(nonExportedGeneratorFunction):
(nonExportedFunction):
* Source/JavaScriptCore/runtime/JSModuleRecord.cpp:
(JSC::JSModuleRecord::instantiateDeclarations):

Canonical link: https://commits.webkit.org/293602@main